--- a/phone-hunter/index.html
+++ b/phone-hunter/index.html
@@ -44,7 +44,7 @@
 
       <div class="text-center m-10">
         <input
-          class="lg:px-5 px-5 py-1 lg:text-xl text-base w-32"
+          class="lg:px-5 px-5 py-1 lg:text-xl text-base w-32 lg:w-56 md:w-56"
           type="text"
           name=""
           id="input-field"
@@ -53,7 +53,7 @@
         <button
           id="button"
           style="margin-left: -5px"
-          class="bg-emerald-700 text-white lg:text-xl text-base px-5 py-1 text-xl rounded hover:bg-sky-700"
+          class="bg-emerald-700 text-white lg:text-xl text-base px-1 lg:px-5 md:px-5 py-1 text-xl rounded hover:bg-sky-700"
         >
           Search
         </button>
